# distributed-storage-semester-project

./: .gitignore  .id  10kb.json  README.md  bootstrap.sh  constants.py  create_post_request.py  create_table.sql  deployment-pane-layout.zellij.kdl  files.db  kev_deployment-pane-layout.zellij.kdl  messages.proto  messages_pb2.py  pyproject.toml  raid1.py  reedsolomon.py  rest-server.py  run.sh  setup.sh  storage-node.py  storage_id.py  storage_node.py  storage_provider.py  utils.py
commands/: cat.sh  ls.sh  post.sh  reset.sh
data_models/: storage_id.py  storage_node.py
log/: task1.1_2_100kB.csv  task1.1_2_10MB.csv  task1.1_2_10kB.csv  task1.1_2_1MB.csv  task1.1_3_10kB.csv  task1.1_3_1MB.csv  task1.1_4_100kB.csv  task1.1_4_10MB.csv  task1.1_4_10kB.csv  task1.1_4_1MB.csv  task1.1_get_2_100kB.csv  task1.1_get_2_10MB.csv  task1.1_get_2_10kB.csv  task1.1_get_2_1MB.csv  task1.1_get_3_100kB.csv  task1.1_get_3_10MB.csv  task1.1_get_3_10kB.csv  task1.1_get_3_1MB.csv  task1.1_get_4_100kB.csv  task1.1_get_4_10MB.csv  task1.1_get_4_10kB.csv  task1.1_get_4_1MB.csv  task1.1_post_2_100kB.txt  task1.1_post_2_10MB.txt  task1.1_post_2_10kB.txt  task1.1_post_2_1MB.txt  task1.1_post_3_100kB.txt  task1.1_post_3_10MB.txt  task1.1_post_3_10kB.txt  task1.1_post_3_1MB.txt  task1.1_post_4_100kB.txt  task1.1_post_4_10MB.txt  task1.1_post_4_10kB.txt  task1.1_post_4_1MB.txt  task1.2_2_100kB.csv  task1.2_3_100kB.csv  task1.2_3_10kB.csv  task1.2_3_1MB.csv  task1.2_4_100kB.csv  task1.2_get_2_100kB.csv  (+23 more)
scripts/: setup_storage_nodes.sh
storage-node0/: .id  934b9587-ef3c-44d2-9323-2cb29c0327d0.1.3  (+1 more)
(+42 files in other folders)
