[tool.poetry]
name = "distributed-storage-semester-project"
version = "0.1.0"
description = "Distributed Storage semester project at Aashus University Autumn 2022"
authors = ["Kristoffer Plagborg Bak Sørensen <kristoffer.pbs@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.8"
zmq = "^0.0.0"
better-exceptions = "^0.3.3"
protobuf = "^4.21.12"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
